--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "fs": "^0.0.1-security",
     "hbs": "^4.2.0",
-    "nodemon": "^3.1.0"
+    "image-size": "^1.1.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.0",
+    "pdf-lib": "^1.17.1",
+    "sharp": "^0.33.2",
+    "uuid": "^9.0.1"
   },
   "name": "instadownloader",
   "version": "1.0.0",
   "description": "instadownloader",
   "main": "app.js",
   "scripts": {
-    "start" : "node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
