--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.6.7",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
     "hbs": "^4.2.0",
     "image-size": "^1.1.1",
