--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
     "axios": "^1.6.7",
     "btch-downloader": "^2.3.2",
     "canvas": "^2.11.2",
+    "capacitor-document-scanner": "^2.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
     "hbs": "^4.2.0",
     "image-size": "^1.1.1",
+    "jscanify": "^1.2.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "pdf-lib": "^1.17.1",
