--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "marked": "^12.0.1",
     "mongoose": "^8.2.2",
     "multer": "^1.4.5-lts.1",
+    "nocache": "^4.0.0",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "pdf-lib": "^1.17.1",
