--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "pdf-lib": "^1.17.1",
+    "rss": "^1.2.2",
     "sharp": "^0.33.2",
     "uuid": "^9.0.1"
   },
