--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "mongoose": "^8.2.2",
     "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "pdf-lib": "^1.17.1",
     "rss": "^1.2.2",
     "sharp": "^0.33.2",
+    "sitemap-generator": "^8.5.1",
     "uuid": "^9.0.1"
   },
   "name": "instadownloader",
