--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "Iluvnet",
     "icons": [
       {
-        "src": "./icons/android-icon-192x192.png",
+        "src": "../public/icons/android-icon-192x192.png",
         "sizes": "192x192",
         "type": "image/png",
         "purpose": "maskable"
