--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "pdf-lib": "^1.17.1",
+    "puppeteer": "^22.6.5",
     "rss": "^1.2.2",
     "sharp": "^0.33.2",
     "sitemap-generator": "^8.5.1",
